--- a/zadania/zad11/podp5-9/css/style.css
+++ b/zadania/zad11/podp5-9/css/style.css
@@ -47,9 +47,10 @@
 	width:100px;
     height:100px;
     top: 0;
+    left: 0;
     margin: 0;
     position:absolute;
-    z-index:2;
+    z-index:20;
     border-radius: 50%;
     
 }
@@ -57,10 +58,77 @@
 	background: url("../images/jez.jpg") center / cover no-repeat white;
 	width:100px;
     height:100px;
-    top: 1;
+    top: 0;
+    left: 50px;
     position:absolute;
-    z-index:1;
+    z-index:10;
     border-radius: 50%;
     margin: 0;
+}
+
+.kolo{
+	width: 50px;
+	height: 50px;
+	border: 3px solid black;
+	border-radius: 50%;
+	position: absolute;
+	top: -26px;
+	left: 0;
+	right: 0;
+	margin:0 auto;
+	background-color: white;
+}
+
+.kolko{
+	width: 20px;
+	height: 20px;
+	background-color: black;
+	border-radius: 50%;
+	position: absolute;
+	top: -11px;
+	left: 0;
+	right: 0;
+	margin:0 auto;
+
+}
+.label {
+	position: relative;
+	width: 200px;
+	height: 300px;
+	border: 3px solid black;
+	margin: 30px;
+}
+
+h3 {
+	display: block;
+	margin-top: 50px;	
+	text-align: center;
+	position: relative;
+	
+
+}
+
+.label p {
+	padding: 15px;
+	position: relative;	
+	text-align: center;
+	font-size: 10px;
+
+}
+
+button {
+	display: block;
+	width: 150px;
+	height: 35px;
+	background-color: black;
+	color: white;
+	position: relative;
+	margin: 0 auto;
+
+
+}
+
+.rodziclabel .label {
+	float: left;
 }
 
